name:                advent2016
version:             0.1.0.0
synopsis:            advent of code 2016
description:         advent of code 2016 from http://adventofcode.com
homepage:            https://github.com/cl04/advent2016#readme
license:             BSD3
license-file:        LICENSE
author:              Chanjuan Li
maintainer:          lichanjuan04@gmail.com
copyright:           3-Clause BSD
category:            misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day2
                     , Day3
                     , Day4
                     , Day5
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.2 && < 1.0
                     , mtl >= 2.2 && < 2.3
                     , bytestring >= 0.10 && < 1.0
                     , array >= 0.5 && < 1.0
                     , parsec >= 3.1 && < 4.0
                     , cryptonite >= 0.2 && < 1.0
  default-language:    Haskell2010

executable advent2016-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.2 && < 1.0
                     , mtl >= 2.2 && < 2.3
                     , bytestring >= 0.10 && < 1.0
                     , array >= 0.5 && < 1.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cl04/advent2016
